methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:29: error: not found: value faire
    faire(Color.GREEN)
    ^