methods.picture.MethodsPicture.scala.code
override def run() {
  carre()
}

def faireV(c: Color) {
  setCouleurBrosse(c)
  avance()
  baisseBrosse()
  leveBrosse()
  avance()
  gauche()
  avance()
  baisseBrosse()
  leveBrosse()
  recule()
  droite()
  avance()
  baisseBrosse()
  leveBrosse()
  avance()
  gauche()  
}

def carre() {
  for (i<- 1 to 3) {
    faireV(Color.YELLOW)
    faireV(Color.RED)
    faireV(Color.BLUE)
    faire(Color.GREEN)
  }
}

